--- a/install-logging.yaml
+++ b/install-logging.yaml
@@ -17,7 +17,7 @@ spec:
     elasticsearch:
       nodeCount: 3 
       storage:
-        storageClassName: "<storage_class_name>" 
+        storageClassName: "standard" 
         size: 200G
       resources: 
           limits:
