test kustomize with policy generator

--- a/operator-installer-new/dev/dev-env-patch.yaml
+++ b/operator-installer-new/dev/dev-env-patch.yaml
@@ -1,5 +1,5 @@
 apiVersion: policy.open-cluster-management.io/v1
-kind: PolicyGenerator
+kind: Policy
 metadata:
   name: install-logging-operator
 policyDefaults:
