--- a/operator-installer-new/dev/kustomization.yaml
+++ b/operator-installer-new/dev/kustomization.yaml
@@ -1,7 +1,6 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-  kind: Kustomization
-  bases:
-    - ./../base
-  patchesStrategicMerge:
-    - dev-env.yaml
+generators:
+  - ./../base/policyGenerator.yaml
+patchesStrategicMerge:
+  - ./dev-env-patch.yaml
+  
 
