--- a/structure-test/policyGenerator.yaml
+++ b/structure-test/policyGenerator.yaml
@@ -2,6 +2,10 @@ apiVersion: policy.open-cluster-management.io/v1
 kind: PolicyGenerator
 metadata:
   name: policy-generator-kustomize
+policyDefaults:
+  namespace: all-policies
+  # Put each object in its own ConfigurationPolicy in the Policy
+  consolidateManifests: false
 policies:
 - name: busybox-policy
   manifests:
